Fix z-index bug on mobile views

--- a/dfgviewer/Resources/Private/Less/modules/sidebar.less
+++ b/dfgviewer/Resources/Private/Less/modules/sidebar.less
@@ -40,7 +40,7 @@
         left: 0;
         min-height: 55px;
         background: @base-blue;
-        z-index: 100;
+        z-index: 1100;
         overflow: hidden;
         h1 {
             position: absolute;
